--- a/src/css/sass/partials/footer.scss
+++ b/src/css/sass/partials/footer.scss
@@ -22,7 +22,7 @@
 		.footerMenu {
 			display: block;
 			float: left;
-			max-width: 20%;
+			max-width: 15%;
 
 			list-style: none;
 			padding: 0 15px;
@@ -32,7 +32,7 @@
 			height: 140px;
 
 			&:nth-child(3), &:nth-child(4) {
-				max-width: 180px;
+				//max-width: 180px;
 			}
 
 			@include susy-media (max-width 960px) {
@@ -63,6 +63,10 @@
 					line-height: 1;
 				}
 			}
+		}
+
+		#menuDownloads {
+			border-right: none;
 		}
 
 		#menuInstitucional {
