--- a/src/css/sass/partials/header.scss
+++ b/src/css/sass/partials/header.scss
@@ -8,7 +8,7 @@
 .header {
 	position: relative;
 	width: 100%;
-	background: url(img/banner.png) center top;
+	background: url(img/banner.png) center 70%;
 	background-size: cover;
 	height: 100vh;
 	min-height: 300px;
@@ -17,6 +17,10 @@
 	box-shadow: 0 30px 60px rgba(#000, .15);
 
 	transition: all .5s;
+
+	&.menorNasInternas {
+		height: 400px;
+	}
 
 	&.headerMenuAberto {
 		margin-bottom: $menuAltura;
@@ -82,6 +86,7 @@
 
 			li {
 				@include span(1 of 3 0);
+				display: table;
 
 				&:nth-child(2) a {
 					border: none;
@@ -98,7 +103,9 @@
 					border-left: solid 1px $cinza;
 					border-right: solid 1px $cinza;
 
-					display: block;
+					// display: block;
+					display: table-cell;
+					vertical-align: middle;
 
 					// display: -webkit-box;
 					// display: -moz-box;
