--- a/src/css/sass/partials/sidebar.scss
+++ b/src/css/sass/partials/sidebar.scss
@@ -4,7 +4,7 @@
  */
 
 
-aside.sideNoticias {
+aside.sideDownloads {
 	@include span(first 3);
 	max-width: 220px;
 
@@ -38,9 +38,9 @@ aside.sideNoticias {
 		}
 	}
 
-	#sidebarNoticias {
+	#sidebarDownloads {
 
-		.maisNoticias {
+		.maisDownloads {
 			list-style: none;
 			padding: 0;
 			margin-left: -17px;
@@ -64,9 +64,11 @@ aside.sideNoticias {
 	}
 }
 
-aside.sideDownloads {
-	@include span(first 5);
+aside.sideNoticias {
+	@include span(first 4);
 	background-color: #e6e6e6;
+	padding: 0 40px;
+	margin-top: 30px;
 
 	@include susy-media (max-width 960px) {
 		@include span(1 of 1 0);
@@ -98,9 +100,9 @@ aside.sideDownloads {
 		}
 	}
 
-	#sidebarDownloads {
+	#sidebarNoticias {
 
-		.maisDownloads {
+		.maisNoticias {
 			list-style: none;
 			padding: 0;
 			margin: 20px 0;
