--- a/src/css/sass/modules/fonts.scss
+++ b/src/css/sass/modules/fonts.scss
@@ -18,6 +18,26 @@
 }
 */
 
+h1 {
+	display: block;
+	margin-top: 0;
+	text-transform: uppercase;
+
+	border-bottom: solid 1px lighten($cinza, 40);
+	margin-bottom: 10px;
+	padding-bottom: 10px;
+
+	&:before {
+		content: '';
+		display: block;
+		margin-right: 10px;
+		margin-top: 0;
+		width: 15px;
+		height: 3rem;
+		float: left;
+		background-color: $cinza;
+	}
+}
 
 h3 {
 	margin-top: 0;
