--- a/src/css/sass/partials/home.scss
+++ b/src/css/sass/partials/home.scss
@@ -18,27 +18,23 @@
 
 	h3 {
 		margin: 0;
-		line-height: 1;
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		right: 0;
+		line-height: 1.3;
 		padding: 5px 10px;
-		background-color: rgba(#fff, .8);
 
 		color: $azul;
-		font-size: 1.2rem;
+		font-size: 1.4rem;
 		font-weight: 500;
 		overflow: hidden;
-		max-height: 4.1rem;
 		text-transform: uppercase;
 		text-align: center;
+
+		vertical-align: middle;
 	}
 
 }
 
 #noticias {
-	@include span(5);
+	@include span(6);
 
 	@include susy-media (max-width 960px) {
 		@include span(1 of 1 0);
@@ -55,14 +51,15 @@
 		.fotoNoticiaG {
 			position: relative;
 			display: block;
-			height: 210px;
+			height: 180px;
 		}
 	}
 
 	.noticiasSecundarias {
 		@include span(2 of 5);
-		height: 210px;
+		height: 272px;
 		position: relative;
+		display: table;
 
 		@include susy-media (max-width 960px) {
 			@include span(1 of 1 0);
@@ -71,8 +68,15 @@
 
 		.cadaNoticiaMenor {
 			position: relative;
-			display: block;
-			height: 100px;
+			display: table-row;
+			vertical-align: middle;
+			height: 136px;
+
+			a {
+				display: table-cell;
+				vertical-align: middle;
+				height: 136px;
+			}
 
 			&:first-child {
 				margin-bottom: 10px;
@@ -88,7 +92,7 @@
 }
 
 #videos {
-	@include span(3);
+	@include span(4);
 
 	@include susy-media (max-width 960px) {
 		@include span(1 of 1 0);
@@ -98,7 +102,7 @@
 	.video {
 		overflow: hidden;
 		position: relative;
-		height: 152px;
+		height: 208px;
 
 		.fotoVideo {
 			display: block;
@@ -132,23 +136,23 @@
 	}
 }
 
-#downloads {
-	@include span(2);
-
-	@include susy-media (max-width 960px) {
-		@include span(1 of 1 0);
-
-		a {
-			display: block;
-			position: relative;
-			margin: auto;
-			width: 130px;
-		}
-	}
-}
+// #downloads {
+// 	@include span(2);
+//
+// 	@include susy-media (max-width 960px) {
+// 		@include span(1 of 1 0);
+//
+// 		a {
+// 			display: block;
+// 			position: relative;
+// 			margin: auto;
+// 			width: 130px;
+// 		}
+// 	}
+// }
 
 #contato {
-	@include span(2);
+	@include span(last 2);
 
 	@include susy-media (max-width 960px) {
 		@include span(1 of 1 0);
@@ -157,7 +161,12 @@
 	.contatoGeral {
 		display: block;
 		overflow: hidden;
-		margin-bottom: 10px;
+		margin-bottom: 5px;
+	}
+
+	.contatoMeuPrecon {
+		display: block;
+		overflow: hidden;
 	}
 }
 
