--- a/src/css/sass/partials/pages.scss
+++ b/src/css/sass/partials/pages.scss
@@ -165,7 +165,6 @@ article {
 		// background-color: #e6e6e6;
 
 		.type-post {
-			@include span(last 8);
 
 			@include susy-media (max-width 960px) {
 				@include span(1 of 1 0);
@@ -181,7 +180,7 @@ article {
 				}
 			}
 
-			p {
+			p, .downloadSingle {
 				@include span(last 6 of 10);
 
 				@include susy-media (max-width 960px) {
@@ -198,30 +197,6 @@ article {
 				@include span(1 of 1 0);
 			}
 
-			.downloadSingle {
-				border-bottom: solid 1px #999;
-				padding-bottom: 10px;
-				margin-bottom: 20px;
-
-				h1, h2 {
-					text-transform: uppercase;
-					color: #5D5D5D;
-					margin: 10px 0;
-					line-height: 1;
-					font-family: "myriad-pro", sans-serif;
-				}
-
-				h1 {
-					font-size: 2.5rem;
-					margin: 0;
-					margin-bottom: 10px;
-				}
-
-				h2 {
-					font-size: 1.8rem;
-					font-weight: 300;
-				}
-			}
 
 			img {
 				@include span(1 of 1 0);
@@ -234,6 +209,30 @@ article {
 
 			p {
 				@include span(1 of 1 0);
+			}
+		}
+
+		.downloadSingle {
+			border-bottom: solid 1px #999;
+			padding-bottom: 10px;
+			margin-bottom: 20px;
+
+			h1, h2 {
+				text-transform: uppercase;
+				color: #5D5D5D;
+				margin: 10px 0;
+				line-height: 1;
+				font-family: "myriad-pro", sans-serif;
+			}
+
+			h1 {
+				border-bottom: none;
+			}
+
+			h2 {
+				font-size: 1.8rem;
+				font-weight: 300;
+				margin: 0;
 			}
 		}
 	}
@@ -308,11 +307,14 @@ article {
 		position: absolute;
 		right: 15px;
 		bottom: 10px;
-		height: 80px;
+		height: 100px;
+		width: 250px;
 
-		.selo, .botaoLaranja {
+		.selo {
 			display: inline-block;
 			vertical-align: bottom;
+			width: 100%;
+			height: auto;
 		}
 
 		.botaoLaranja {
@@ -421,7 +423,7 @@ article {
 
 // Page pessoas
 
-.page-template-template-pessoas, .contato, .pessoas {
+.page-template-template-pessoas, .page-template-template-institucional, .contato, .pessoas {
 
 	.pageCabecalho {
 		height: 200px;
@@ -444,6 +446,11 @@ article {
 			text-transform: uppercase;
 			position: absolute;
 			bottom: 0;
+			border: none;
+
+			&:before {
+				display: none;
+			}
 		}
 	}
 
@@ -465,7 +472,10 @@ article {
 
 }
 
+
 // Prêmios e Certificações
+
+
 
 .certificacoes {
 
@@ -479,18 +489,38 @@ article {
 	.grupoPremios {
 		@include container();
 
+		&:after {
+			content: " ";
+			display: block;
+			clear: both;
+		}
+
 		.cadaPremio {
-			@include span(1 of 4);
+			@include span(1 of 3 .1);
 			text-align: center;
+			border: solid 1px $azul;
+			margin-bottom: 40px;
+			display: table;
 
 			.contemLogo {
-				border: solid 1px $azul;
 				height: 200px;
-				padding: 20px;
+				padding: 10px;
 
 				white-space: nowrap;
 				text-align: center;
-				margin: 1em 0;
+
+				@include span(1 of 2 0);
+			}
+
+			.inTitulo {
+				@include span(last 1 of 2 0);
+				background-color: $azul;
+				color: #fff;
+				height: 200px;
+				text-transform: uppercase;
+
+				display: table-cell;
+				vertical-align: middle;
 			}
 
 			.helper {
@@ -501,7 +531,7 @@ article {
 
 			img {
 		    vertical-align: middle;
-		    max-height: 200px;
+		    max-height: 180px;
 				max-width: 100%;
 			}
 		}
@@ -553,5 +583,88 @@ article {
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-position: 50% 50%;
+	}
+}
+
+.todasNoticias {
+	list-style: none;
+	padding-left: 0;
+
+	li {
+		background-color: #eaeaea;
+	}
+
+	.noticiaDestaque {
+		margin-bottom: 20px;
+		display: block;
+		position: relative;
+		@include container(12);
+
+		.linkNoticiaDestaque {
+			@include span(6);
+			display: block;
+			position: relative;
+
+			img {
+				max-width: 100%;
+				max-height: 400px;
+
+				width: auto;
+				height: auto;
+			}
+		}
+
+		.conteudoNoticiaDestaque {
+			@include span(last 6);
+
+			h3, h4 {
+				color: $azul;
+			}
+
+			h3 {
+				margin-top: 20px;
+				margin-bottom: 0;
+				font-size: 2.5rem;
+				text-transform: uppercase;
+			}
+
+			h4 {
+				margin-top: 0;
+				margin-bottom: 20px;
+				font-size: 2rem;
+			}
+		}
+
+	}
+
+	.outrasNoticias {
+		display: block;
+		@include span(6);
+		margin-bottom: 20px;
+		height: 170px;
+		padding: 15px;
+
+		.linkPostOutrasNoticias {
+			h3 {
+				text-transform: uppercase;
+				color: $azul;
+			}
+		}
+
+		.linkImagemOutrasNoticias {
+			display: block;
+			width: 250px;
+			float: left;
+			overflow: hidden;
+			position: relative;
+
+			img {
+				display: block;
+				margin: 0 auto;
+				max-height: 170-30px;
+				max-width: 230px;
+			}
+		}
+
 	}
 }
